tests/baselines/reference/jsxNamespacePrefixIntrinsics.errors.txt
tests/cases/compiler/jsxNamespacePrefixIntrinsics.tsx(15,18): error TS2339: Property 'element' does not exist on type 'JSX.IntrinsicElements'.


==== tests/cases/compiler/jsxNamespacePrefixIntrinsics.tsx (1 errors) ====
    declare namespace JSX {
      interface IntrinsicElements {
        "ns:element": {
          "ns:attribute": string;
        },
        "ns:NamespacedUpcaseAlsoIntrinsic": any,
        "NS:NamespacedUpcaseAlsoIntrinsic": any
      }
    }
    
    const valid = <ns:element ns:attribute="yep" />;
    const validUpcase1 = <ns:NamespacedUpcaseAlsoIntrinsic />;
    const validUpcase2 = <NS:NamespacedUpcaseAlsoIntrinsic />;
    
    const invalid1 = <element />;
                     ~~~~~~~~~~~
!!! error TS2339: Property 'element' does not exist on type 'JSX.IntrinsicElements'.
    const invalid2 = <ns:element attribute="nope" />;
    const invalid3 = <ns:element ns:invalid="nope" />;
    